fix(file-upload): align error && update doc

--- a/packages/ods/src/components/file-upload/src/components/ods-file-upload/ods-file-upload.scss
+++ b/packages/ods/src/components/file-upload/src/components/ods-file-upload/ods-file-upload.scss
@@ -69,7 +69,6 @@ $ods-file-upload-spacing: 8px;
       flex-flow: column;
       row-gap: 8px;
       width: 100%;
-      text-align: center;
       color: var(--ods-color-critical-500);
       font-size: font.px-to-rem(12px);
       font-weight: 600;
